refactored it tests